<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TempActivity">

    <TextView
        android:id="@+id/txtTitleTemp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_temp" />

    <TextView
        android:id="@+id/txtExpTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp_temp" />
    <RadioGroup
        android:id="@+id/radioGrpTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/radioC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_c" />

        <RadioButton android:id="@+id/radioF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_f" />

    </RadioGroup>

    <EditText
        android:id="@+id/numDegrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_con_temp" />
    <Button
        android:id="@+id/btnCalcTemp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calc_temp" />
    <Button
        android:id="@+id/btnMain3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main" />
</LinearLayout>